--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $dark-green: #36605a;
 $bright-green: #008e9d;
 $light-gray: #F1F1F1;
 $dark-gray: #4A4A4A;
+$brown: #554449;
 
 
 $color__background-body: $white;
