Add flexbox css & basic header & footer styles

--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -50,5 +50,6 @@ $font__line-height-pre: 1.6;
 =            Structure            =
 =================================*/
 
+$size__max-width: 1200px;
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
