--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $white: #fff;
 $dark-green: #36605a;
 $bright-green: #008e9d;
 $light-gray: #F1F1F1;
+$gray: #9b9b9b;
 $dark-gray: #4A4A4A;
 $brown: #554449;
 
@@ -50,6 +51,6 @@ $font__line-height-pre: 1.6;
 =            Structure            =
 =================================*/
 
-$size__max-width: 1200px;
+$size__max-width: 900px;
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
