--- a/wp-content/themes/defense360/sass/base/_typography.scss
+++ b/wp-content/themes/defense360/sass/base/_typography.scss
@@ -5,7 +5,7 @@ select,
 textarea {
 	color: $color__text-main;
 	font-family: $font__main;
-	@include font-size(1);
+	@include fontSize(14px);
 	line-height: $font__line-height-body;
 }
 
@@ -40,7 +40,7 @@ address {
 pre {
 	background: $color__background-pre;
 	font-family: $font__pre;
-	@include font-size(0.9375);
+	@include fontSize(14px);
 	line-height: $font__line-height-pre;
 	margin-bottom: 1.6em;
 	max-width: 100%;
@@ -50,7 +50,7 @@ pre {
 
 code, kbd, tt, var {
 	font-family: $font__code;
-	@include font-size(0.9375);
+	@include fontSize(14px);
 }
 
 abbr, acronym {
