--- a/wp-content/themes/defense360/sass/modules/_accessibility.scss
+++ b/wp-content/themes/defense360/sass/modules/_accessibility.scss
@@ -13,7 +13,7 @@
 		clip: auto !important;
 		color: $color__text-screen;
 		display: block;
-		@include font-size(0.875);
+		@include fontSize(14px);
 		font-weight: bold;
 		height: auto;
 		left: 5px;
