--- a/wp-content/themes/defense360/sass/layout/_header.scss
+++ b/wp-content/themes/defense360/sass/layout/_header.scss
@@ -26,6 +26,7 @@ header.site-header {
 	
 	nav.main-navigation {
 		padding-top: 2rem;
+		padding-bottom: 1rem;
 
 		ul#primary-menu {
 			display: block;
@@ -34,8 +35,7 @@ header.site-header {
 			padding: 0;
 
 			li {
-				float: left;
-				position: relative;
+				display: inline-block;
 				margin-right: 5%;
 
 				a {
@@ -44,6 +44,31 @@ header.site-header {
 					color: $dark-gray;
 					text-transform: uppercase;
 					letter-spacing: 0.5px;
+				}
+			}
+		}
+	}
+
+	nav.secondary-navigation {
+		background-color: $light-gray;
+		padding: 0.8rem;
+
+		ul#secondary-menu {
+			display: block;
+			list-style: none;
+			margin: 0;
+			padding: 0;
+
+			li {
+				display: inline-block;
+				margin-right: 5%;
+
+				a {
+					text-decoration: none;
+					color: $dark-gray;
+					text-transform: uppercase;
+					letter-spacing: 0.4px;
+					@include fontSize(13px);
 				}
 			}
 		}
