--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -94,4 +94,5 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /*----------  Vendors  ----------*/
 @import
   'vendors/flexbox/flexbox-main',
-  'vendors/flexbox/flexbox-helpers';
+  'vendors/flexbox/flexbox-helpers',
+  'vendors/fontello/fontello';
