--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -25,6 +25,7 @@ $color__link: $bright-green;
 $color__link-visited: $dark-green;
 $color__link-hover: $dark-green;
 $color__text-main: $dark-gray;
+$color__text-copyright: #8c898c;
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
@@ -46,6 +47,8 @@ $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+
+
 
 /*=================================
 =            Structure            =
