--- a/wp-content/themes/defense360/sass/layout/_footer.scss
+++ b/wp-content/themes/defense360/sass/layout/_footer.scss
@@ -3,8 +3,44 @@
 ==============================*/
 
 footer.site-footer {
+	margin-top: 2rem;
+
+	.footer-logoContainer {
+		margin-bottom: 0.5rem;
+		
+		img {
+			max-width: 50%;
+		}
+	}
+
+	.footer-infoContainer p {
+		max-width: 90%;
+		margin-top: 0;
+	}
+
+	.footer-contactInfo {
+		h3 {
+			margin: 0;
+			text-transform: uppercase;
+			font-weight: bold;
+			@include fontSize(14px);
+		}
+
+		address {
+			font-style: normal;
+			margin: 0;
+		}
+
+		i.icon {
+			@include fontSize(16px);
+		}
+
+	}
 	.footer-copyright {
+		margin-top: 1rem;
 		background-color: $light-gray;
 		padding: 0.5rem;
+		color: $color__text-copyright;
+		@include fontSize(12px);
 	}
 }
