Add description to main menu navigation
Created a custom walker for the main menu so we can display the menu
item’s description. This is for the “Series:” text.

--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -36,7 +36,7 @@ $color__border-abbr: #666;
 /*==================================
 =            Typography            =
 ==================================*/
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Source+Serif+Pro');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Source+Serif+Pro');
 
 $font__OpenSans: 'Open Sans', sans-serif;
 $font__SourceSans: 'Source Serif Pro', serif;
