Style single post layout

--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -54,6 +54,7 @@ $font__line-height-pre: 1.6;
 =            Structure            =
 =================================*/
 
-$size__max-width: 900px;
+$size__container-max-width: 900px;
+$size__content-max-width: 500px;
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
