--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -2,31 +2,59 @@
 =            Posts            =
 =============================*/
 
-article.post {
-
-	/*----------  Post Header  ----------*/
+/*----------  Single Posts  ----------*/
+.single-post article.post {
 	header.entry-header {
 		text-align: center;
 		margin-bottom: 2rem;
+	}
+}
 
-		.entry-title {
-			font-family: $font__SourceSans;
+/*----------  Global Post Styles  ----------*/
+article.post {
+	margin-bottom: 3rem;
+
+	/*----------  Post Header  ----------*/
+	header.entry-header {
+
+		.post-contentType {
+			text-transform: uppercase;
+			color: $gray;
+
+			a {
+				text-decoration: none;
+				color: $gray;
+			}
 		}
 
-		.entry-meta {
+		.post-categories {
+			text-transform: uppercase;
+
 			a {
 				text-decoration: none;
 			}
+		}
 
-			.posted-on {
-				color: $bright-green;
-			}
+		.entry-title {
+			font-family: $font__SourceSans;
+			margin: 0 0 1rem;
 		}
 
 		img {
 			width: 100%;
 			height: auto;
 			margin-top: 2rem;
+		}
+	}
+
+	/*----------  Post Meta  ----------*/
+	.entry-meta {
+		a {
+			text-decoration: none;
+		}
+
+		.posted-on {
+			color: $bright-green;
 		}
 	}
 
@@ -39,6 +67,14 @@ article.post {
 			width: 100%;
 			height: auto;
 			max-width: 100px;
+		}
+	}
+
+	/*----------  Post Thumbnails  ----------*/
+	.post-thumbnailContainer {
+		img {
+			width: 100%;
+			height: auto;
 		}
 	}
 
