--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -32,12 +32,13 @@ article.post {
 
 			a {
 				text-decoration: none;
+				color: $bright-green;
 			}
 		}
 
 		.entry-title {
 			font-family: $font__SourceSans;
-			margin: 0 0 1rem;
+			margin: 0;
 		}
 
 		img {
@@ -45,10 +46,20 @@ article.post {
 			height: auto;
 			margin-top: 2rem;
 		}
+
+		.post-series {
+			color: $gray;
+			a {
+				color: $gray;
+				text-decoration: none;
+			}
+		}
 	}
 
 	/*----------  Post Meta  ----------*/
 	.entry-meta {
+		margin-top: 1rem;
+
 		a {
 			text-decoration: none;
 		}
