--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -43,6 +43,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	## Lists
 	## Media
 	## Tables
+  ## Social Share
 # Layout
 	## Header
 	## Footer
@@ -79,7 +80,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'components/galleries',
   'components/lists',
   'components/media',
-  'components/tables';
+  'components/tables',
+  'components/social-share';
 
 /*----------  Layout  ----------*/
 @import
