Add tags to posts

--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -22,7 +22,7 @@ $color__text-screen: $dark-gray;
 $color__text-input: $dark-gray;
 $color__text-input-focus: #111;
 $color__link: $bright-green;
-$color__link-visited: $dark-green;
+$color__link-visited: $bright-green;
 $color__link-hover: $dark-green;
 $color__text-main: $dark-gray;
 $color__text-copyright: #8c898c;
