--- a/wp-content/themes/defense360/sass/layout/_footer.scss
+++ b/wp-content/themes/defense360/sass/layout/_footer.scss
@@ -3,7 +3,9 @@
 ==============================*/
 
 footer.site-footer {
-	margin-top: 2rem;
+	margin-top: 3rem;
+	border-top: 2px solid $light-gray;
+	padding-top: 3rem;
 
 	.footer-logoContainer {
 		margin-bottom: 0.5rem;
@@ -32,7 +34,6 @@ footer.site-footer {
 		}
 
 		a {
-			text-decoration: none;
 			color: $dark-gray;
 
 			&:hover {
