Post styling for mobile

--- a/wp-content/themes/defense360/sass/abstracts/_mixins.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_mixins.scss
@@ -28,3 +28,10 @@ $browser-context: 16px;
 @mixin clearfix-after() {
 	clear: both;
 }
+
+// Breakpoint
+@mixin breakpoint($size) {
+	@media screen and (min-width: $size) {
+		@content;
+	}
+}
