--- a/wp-content/themes/defense360/sass/base/_base.scss
+++ b/wp-content/themes/defense360/sass/base/_base.scss
@@ -17,7 +17,7 @@ body {
 	margin: 0 auto;
 	padding: 0 1rem;
 
-	@media screen and (min-width: $size__container-max-width) {
+	@include breakpoint($size__container-max-width) {
 		padding: 0;
 	}
 
@@ -29,7 +29,7 @@ body {
 .content-wrapper-narrow {
 	padding: 0 1rem;
 
-	@media screen and (min-width: $size__content-max-width) {
+	@include breakpoint($size__content-max-width) {
 		max-width: $size__content-max-width;
 		margin: 0 auto;
 		padding: 0;
