--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $brown: #554449;
 $color__background-body: $white;
 $color__background-screen: $white;
 $color__background-hr: $light-gray;
+$color__navigation-border: #dfdfdf;
 $color__background-button: #e6e6e6;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
