--- a/wp-content/themes/defense360/sass/base/_base.scss
+++ b/wp-content/themes/defense360/sass/base/_base.scss
@@ -10,6 +10,10 @@ html {
 
 body {
 	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
+
+	&.menu-mobile-active {
+		overflow-y: hidden;
+	}
 }
 
 .content-wrapper {
