--- a/wp-content/themes/defense360/sass/base/_typography.scss
+++ b/wp-content/themes/defense360/sass/base/_typography.scss
@@ -92,3 +92,42 @@ a {
 	}
 }
 
+/*==================================
+=            Close Icon            =
+==================================*/
+
+.close-icon {
+	position: relative;
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    overflow: hidden;
+
+    &::before, &::after {
+    	content: '';
+	    position: absolute;
+	    height: 2px;
+	    width: 100%;
+	    top: 50%;
+	    left: 0;
+	    margin-top: -1px;
+	    background: $black;
+    }
+
+    &::before {
+    	-webkit-transform: rotate(45deg);
+	    -moz-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	    -o-transform: rotate(45deg);
+	    transform: rotate(45deg);
+    }
+
+    &::after {
+    	-webkit-transform: rotate(-45deg);
+	    -moz-transform: rotate(-45deg);
+	    -ms-transform: rotate(-45deg);
+	    -o-transform: rotate(-45deg);
+	    transform: rotate(-45deg);
+    }
+}
+
