--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $light-gray: #F1F1F1;
 $gray: #9b9b9b;
 $dark-gray: #4A4A4A;
 $brown: #554449;
+$search-gray: #797979;
 
 
 $color__background-body: $white;
