Search & filter style for archive pages

--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $gray: #9b9b9b;
 $dark-gray: #4A4A4A;
 $brown: #554449;
 $search-gray: #797979;
+$archive-filter-gray: #e7e7e7;
 
 
 $color__background-body: $white;
