Updated post styling for archive & homepage
- Created a separate content template for secondary home page features
- Altered styles for desktop & mobile experiences for the standard
content output

--- a/wp-content/themes/defense360/sass/layout/_header.scss
+++ b/wp-content/themes/defense360/sass/layout/_header.scss
@@ -80,6 +80,7 @@ header.site-header {
 
 			li {
 				text-align: center;
+				@include fontSize(14px);
 
 				// Apply styles to all list items at medium breakpoint
 				@include breakpoint("medium") {
