--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $dark-gray: #4A4A4A;
 $brown: #554449;
 $search-gray: #797979;
 $archive-filter-gray: #e7e7e7;
+$latest-decoration-gray: #ccc7c2;
 
 
 $color__background-body: $white;
