Style the latest posts

--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -22,11 +22,13 @@
 article.post {
 	margin-bottom: 3rem;
 
-	.post-thumbnail.isHomepage {
-		padding-right: 1rem;
-	}
-	.post-content.isHomepage {
-		padding-left: 1rem;
+	@include breakpoint("medium") {
+		.post-thumbnail.isHomepage {
+			padding-right: 1rem;
+		}
+		.post-content.isHomepage {
+			padding-left: 1rem;
+		}
 	}
 
 	/*----------  Post Header  ----------*/
