--- a/wp-content/themes/defense360/sass/pages/_home.scss
+++ b/wp-content/themes/defense360/sass/pages/_home.scss
@@ -6,6 +6,10 @@
 
 	/*----------  The Latest  ----------*/
 	.home-latestContainer {
+		@include breakpoint("medium") {
+			padding-right: 1rem;
+		}
+
 		.latest-title {
 			color: $gray;
 			@include fontSize(20px);
@@ -41,6 +45,37 @@
 			width: 54%;
 			margin-left: 4.5%;
 			vertical-align: middle;
+		}
+
+		article.post {
+			border-bottom: 2px solid $archive-filter-gray;
+			margin-bottom: 0;
+			padding-bottom: 0.75rem;
+			margin-top: 0.75rem;
+
+			@include breakpoint("medium") {
+				padding-bottom: 1.5rem;
+				margin-top: 1.5rem;
+			}
+
+			&:last-of-type {
+				border-bottom: 0;
+			}
+
+			header.entry-header .entry-title {
+				@include fontSize(18px);
+				a {
+					color: $dark-gray;
+				}
+			}
+		}
+	}
+
+	/*----------  Secondary Features  ----------*/
+	// Post styles in _posts.scss
+	.home-secondaryFeaturesContainer {
+		@include breakpoint("medium") {
+			padding-left: 1rem;
 		}
 	}
 }
