Finished home page styles
- Updated footer styles on home page
- Added feature image meta to series custom taxonomy
- Display feature image of featured series on home page

--- a/wp-content/themes/defense360/sass/layout/_footer.scss
+++ b/wp-content/themes/defense360/sass/layout/_footer.scss
@@ -10,8 +10,10 @@ footer.site-footer {
 	.footer-logoContainer {
 		margin-bottom: 0.5rem;
 
-		img {
-			max-width: 50%;
+		@include breakpoint("medium") {
+			img {
+				max-width: 50%;
+			}
 		}
 	}
 
