--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -62,3 +62,4 @@ $size__container-max-width: 900px;
 $size__content-max-width: 500px;
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
+$size__home-series-max-height: 400px;
