--- a/wp-content/themes/defense360/sass/pages/_home.scss
+++ b/wp-content/themes/defense360/sass/pages/_home.scss
@@ -82,9 +82,11 @@
 	/*----------  Series  ----------*/
 	.home-seriesContainer {
 		background-color: $light-gray;
+		margin-top: 1rem;
 
 		@include breakpoint("medium") {
 			max-height: $size__home-series-max-height;
+			margin-top: 0;
 		}
 
 		.home-seriesSpotlight {
