Adjusted pagination styles

--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -44,6 +44,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 	## Media
 	## Tables
   ## Social Share
+  ## Pagination
 # Layout
 	## Header
 	## Footer
@@ -84,7 +85,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   'components/lists',
   'components/media',
   'components/tables',
-  'components/social-share';
+  'components/social-share',
+  'components/pagination';
 
 /*----------  Layout  ----------*/
 @import
