--- a/wp-content/themes/defense360/sass/pages/_archives.scss
+++ b/wp-content/themes/defense360/sass/pages/_archives.scss
@@ -15,13 +15,34 @@
 				color: $gray;
 			}
 		}
+
+		.archive-description p {
+			@include fontSize(14px);
+		}
+	}
+
+	/*----------  Posts  ----------*/
+	article.post {
+		margin-bottom: 2rem;
+
+		@include breakpoint("medium") {
+			border-bottom: 2px solid $archive-filter-gray;
+			padding-bottom: 2rem;
+		}
+
+		&:last-of-type {
+			border-bottom: 0;
+		}
+		.entry-header .entry-title {
+			@include fontSize(24px);
+		}
 	}
 }
 
 /*----------  Search & Filter  ----------*/
 
 .archive-searchFilter {
-	margin: 1rem 0;
+	margin: 2rem 0;
 
 	.searchFilter-title {
 		display:inline-block;
