--- a/wp-content/themes/defense360/sass/abstracts/_variables.scss
+++ b/wp-content/themes/defense360/sass/abstracts/_variables.scss
@@ -18,7 +18,7 @@ $color__background-body: $white;
 $color__background-screen: $white;
 $color__background-hr: $light-gray;
 $color__navigation-border: #dfdfdf;
-$color__background-button: #e6e6e6;
+$color__background-button: $dark-green;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 
@@ -31,9 +31,6 @@ $color__link-hover: $dark-green;
 $color__text-main: $dark-gray;
 $color__text-copyright: #8c898c;
 
-$color__border-button: #ccc #ccc #bbb;
-$color__border-button-hover: #ccc #bbb #aaa;
-$color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
 
