--- a/wp-content/themes/defense360/sass/pages/_archives.scss
+++ b/wp-content/themes/defense360/sass/pages/_archives.scss
@@ -80,6 +80,7 @@
 		    text-align: left;
 		    padding: 0.5rem 1rem;
 		    position: relative;
+		    margin-bottom: 0;
 
 		    @include breakpoint("medium") {
 		    	text-align: center;
