--- a/wp-content/themes/defense360/sass/pages/_home.scss
+++ b/wp-content/themes/defense360/sass/pages/_home.scss
@@ -169,6 +169,7 @@
 			@include fontSize(14px);
 			text-transform: uppercase;
 			font-weight: normal;
+			font-style: normal;
 			margin: 0;
 		}
 
