--- a/wp-content/themes/defense360/sass/components/_media.scss
+++ b/wp-content/themes/defense360/sass/components/_media.scss
@@ -1,3 +1,12 @@
+img {
+	height: auto; /* Make sure images are scaled correctly. */
+	max-width: 100%; /* Adhere to container width. */
+}
+
+figure {
+	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
+}
+
 .page-content .wp-smiley,
 .entry-content .wp-smiley,
 .comment-content .wp-smiley {
