--- a/wp-content/themes/defense360/sass/pages/_posts.scss
+++ b/wp-content/themes/defense360/sass/pages/_posts.scss
@@ -91,6 +91,8 @@ article.post {
 		.post-series {
 			color: $gray;
 			@include fontSize(20px);
+			margin: 0;
+			font-weight: normal;
 
 			a {
 				color: $gray;
@@ -102,6 +104,21 @@ article.post {
 	.entry-content {
 		p {
 			margin-bottom: 0.5rem;
+		}
+
+		.download {
+			background-color: $dark-green;
+			color: $light-gray;
+			text-transform: uppercase;
+			@include fontSize(13px);
+			padding: 0.5rem 3rem;
+			margin-top: 1rem;
+			margin-bottom: 1rem;
+			display: inline-block;
+
+			a {
+				color: $light-gray;
+			}
 		}
 	}
 
