Add editor styles
For tinyMCE

--- a/wp-content/themes/defense360/sass/base/_typography.scss
+++ b/wp-content/themes/defense360/sass/base/_typography.scss
@@ -17,42 +17,47 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 }
 
+%h1 {
+	font-family: $font__SourceSans;
+	@include fontSize(28px);
+	font-weight: 600;
+	line-height: 1.25;
+	color: $black;
+	margin: 0.25rem 0 0 0;
+}
+
+%h2 {
+	font-family: $font__OpenSans;
+	@include fontSize(24px);
+	font-weight: normal;
+	color: $bright-green;
+	margin: 2rem 0 1rem;
+}
+
+%h3 {
+	font-family: $font__OpenSans;
+	@include fontSize(20px);
+	font-weight: normal;
+	color: $gray;
+	margin: 1.5rem 0 1rem;
+}
+
+%h4 {
+	font-family: $font__OpenSans;
+	@include fontSize(18px);
+	font-style: italic;
+	font-weight: normal;
+	color: $dark-gray;
+	letter-spacing: 0.7px;
+	margin: 1rem 0;
+}
+
 body.single, body.page {
 
-	h1 {
-		font-family: $font__SourceSans;
-		@include fontSize(28px);
-		font-weight: 600;
-		line-height: 1.25;
-		color: $black;
-		margin: 0.25rem 0 0 0;
-	}
-
-	h2 {
-		font-family: $font__OpenSans;
-		@include fontSize(24px);
-		font-weight: normal;
-		color: $bright-green;
-		margin: 2rem 0 1rem;
-	}
-
-	h3 {
-		font-family: $font__OpenSans;
-		@include fontSize(20px);
-		font-weight: normal;
-		color: $gray;
-		margin: 1.5rem 0 1rem;
-	}
-
-	h4 {
-		font-family: $font__OpenSans;
-		@include fontSize(18px);
-		font-style: italic;
-		font-weight: normal;
-		color: $dark-gray;
-		letter-spacing: 0.7px;
-		margin: 1rem 0;
-	}
+	h1 { @extend %h1 }
+	h2 { @extend %h2 }
+	h3 { @extend %h3 }
+	h4 { @extend %h4 }
 }
 
 /*============================
@@ -64,12 +69,28 @@ p {
 	line-height: 1.5;
 }
 
+hr {
+	background-color: $color__background-hr;
+	border: 0;
+	height: 1px;
+	margin-bottom: 1.5em;
+}
+
 dfn, cite, em, i {
 	font-style: italic;
 }
 
 blockquote {
 	margin: 0 1.5em;
+}
+
+blockquote, q {
+	quotes: "" "";
+
+	&:before,
+	&:after {
+		content: "";
+	}
 }
 
 address {
