Create series landing page
Create a page that lists all of the series on the site in alphabetical
order. Accessible at /series

--- a/wp-content/themes/defense360/sass/style.scss
+++ b/wp-content/themes/defense360/sass/style.scss
@@ -55,6 +55,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
   ## Home
   ## Posts
   ## Archives
+  ## Series Archive
 # Vendors
 --------------------------------------------------------------*/
 
@@ -99,7 +100,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import
   'pages/home',
   'pages/posts',
-  'pages/archives';
+  'pages/archives',
+  'pages/series-archive';
 
 /*----------  Vendors  ----------*/
 @import
