--- a/wp-content/themes/defense360/sass/pages/_home.scss
+++ b/wp-content/themes/defense360/sass/pages/_home.scss
@@ -84,19 +84,26 @@
 		background-color: $light-gray;
 		margin-top: 1rem;
 
-		@include breakpoint("medium") {
-			max-height: $size__home-series-max-height;
-			margin-top: 0;
+		.content-wrapper.row {
+			padding: 0;
+
+			@include breakpoint("medium") {
+				padding: initial;
+			}
 		}
 
 		.home-seriesSpotlight {
-			padding:2rem 1rem 2rem 0;
+			padding:2rem 1rem;
+
+			@include breakpoint("medium") {
+				padding:2rem 1rem 2rem 0;
+			}
 
 			.series-featuredTitle {
 				font-family: $font__SourceSans;
 				@include fontSize(24px);
 				font-weight: 600;
-				margin: 0.5rem 0 1rem;
+				margin: 0.25rem 0 1rem;
 
 				a {
 					color: $black;
@@ -143,25 +150,10 @@
 
 		.home-seriesFeaturedImage {
 			padding: 0;
-
-			@include breakpoint("medium") {
-				overflow: hidden;
-				padding: initial;
-			}
-
-			img {
-				width: 100vw;
-				height: auto;
-				margin-left: -1rem;
-				margin-right: -1rem;
-
-
-				@include breakpoint("medium") {
-					height: 100%;
-					width: auto;
-					max-height: $size__home-series-max-height;
-				}
-			}
+			background-repeat: no-repeat;
+			background-size: cover;
+			background-position: center center;
+			min-height: 150px;
 		}
 
 		.series-sectionTitle, .series-learnMore {
